# xunfei_sceond_homework

./: README.md
bag_analysis/: re.py  readme.md
ros_homework/: README.md
ros_homework/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros_homework/devel/include/something_about_topic/: mag.h
ros_homework/devel/lib/pkgconfig/: something_about_topic.pc  someting_about_topic.pc
ros_homework/devel/lib/something_about_topic/: mag_publisher  mag_subscriber
ros_homework/src/: CMakeLists.txt
ros_homework/src/something_about_topic/: CMakeLists.txt  package.xml
ros_homework/src/something_about_topic/launch/: cpp.launch  py.launch
ros_homework/src/something_about_topic/scripts/: mag_publisher.py  mag_subscriber.py
ros_homework/src/something_about_topic/src/: mag_publisher.cpp  mag_subscriber.cpp
zhaoxin_ws_fangzhen/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
zhaoxin_ws_fangzhen/devel/include/practice/: my_property.h
zhaoxin_ws_fangzhen/devel/lib/pkgconfig/: hello_ros.pc  practice.pc
zhaoxin_ws_fangzhen/devel/lib/practice/: property_listener  property_talker
zhaoxin_ws_fangzhen/src/hello_ros/: package.xml
zhaoxin_ws_fangzhen/src/hello_ros/launch/: hello_ros.launch
zhaoxin_ws_fangzhen/src/hello_ros/scripts/: listener.py
zhaoxin_ws_fangzhen/src/practice/: CMakeLists.txt  package.xml
zhaoxin_ws_fangzhen/src/practice/launch/: property.launch
zhaoxin_ws_fangzhen/src/practice/msg/: my_property.msg
zhaoxin_ws_fangzhen/src/practice/scripts/: property_listener.py  property_talker.py
zhaoxin_ws_fangzhen/src/practice/src/: property_listener.cpp  property_talker.cpp
(+33 files in other folders)
